# auction-intel

./: .env.production  Dockerfile  USER_GUIDE.md  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json  railway.json  render.yaml  vercel.json
backend/: Cargo.toml  Dockerfile
backend/src/: auctions.rs  census.rs  foreclosure.rs  fred_api.rs  main.rs  market_data.rs
public/: manifest.json  sw.js
src/: App.jsx  AuctionPlatform.jsx  AuthContext.jsx  ForgotPassword.jsx  SignIn.jsx  SignUp.jsx  ToastContext.jsx  USMap.jsx  UpcomingAuctions.jsx  WatchlistContext.jsx  data.js  exportUtils.js  index.css  main.jsx  tier_platform.jsx
src/components/: AlertSettings.jsx  AuctionCalendar.jsx  CountdownTimer.jsx  InvestmentHeatMap.jsx  MarketDataDashboard.jsx  MobileNav.jsx  PropertyDueDiligence.jsx  PropertyFeed.jsx  PropertyModal.jsx  ROICalculator.jsx  UserSettings.jsx  WelcomeScreen.jsx
src/components/charts/: Sparkline.jsx  TrendChart.jsx  index.js
src/utils/: csvExport.js
