[package]
name = "auction-intel-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors"] }
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
chrono = "0.4"
